--- a/code/starter-code.ipynb
+++ b/code/starter-code.ipynb
@@ -1822,7 +1822,8 @@
    "source": [
     "#fixing errors\n",
     "act_2018.drop(19, axis=0, inplace=True)\n",
-    "#df[df['column']=='__'].index"
+    "#df[df['column']=='__'].index\n",
+    "#this is a comment"
    ]
   },
   {
