--- a/code/Project1.ipynb
+++ b/code/Project1.ipynb
@@ -2009,12 +2009,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save as a csv file\n",
-    "df.to_csv('F:\\GA\\Projects\\project-1\\data\\project1.csv', index=False)"
+    "act.to_csv('F:\\GA\\Projects\\project-1\\data\\or.csv', index=False)"
    ]
   },
   {
@@ -2654,11 +2654,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The change on SAT rules on 2016 was successful since we see increase in participation rates nationally.\n",
-    "As we saw, lowest SAT participation rate is for central states and the highest is for eastern states.\n",
-    "Overall, all three different locations had increase in the SAT participation rates.\n",
-    "Overall, all three different locations had decrease in the ACT participation rates.\n",
-    "After the change, SAT participation rate has increased and ACT participation rate has decreased."
+    "**To-Do:** *Edit this cell with your conclusions and recommendations.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Don't forget to create your README!\n",
+    "\n",
+    "**To-Do:** *If you combine your problem statement, data dictionary, brief summary of your analysis, and conclusions/recommendations, you have an amazing README.md file that quickly aligns your audience to the contents of your project.* Don't forget to cite your data sources!"
    ]
   }
  ],
